testsuite/tests/interpreter_errors/invalid_property_access_nullable/test.out
main.adb

Error: Invalid direct access on node of kind ConstantAbsent?

objects[1].has_constant.get_attribute("attribute")
                        ^^^^^^^^^^^^^^            

